force-app/main/default/objects/Distance__c/Distance__c.object-meta.xml
<CustomObject>
    <label>Distance</label>
    <nameField>
        <label>Distance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>