force-app/main/default/objects/Distance__c/fields/Distance_UOM_From__c.field-meta.xml
<CustomField>
    <fullName>Distance_UOM_From__c</fullName>
    <label>Distance_UOM_From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>ft</fullName>
            </value>
            <value>
                <fullName>mm</fullName>
            </value>
            <value>
                <fullName>cm</fullName>
            </value>
            <value>
                <fullName>m</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>