force-app/main/default/objects/Distance__c/fields/Divider__c.field-meta.xml
<CustomField>
    <fullName>Divider__c</fullName>
    <label>Divider</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>